--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--iamprot 결제-->
-    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
+    <!-- <script src="https://cdn.iamport.kr/v1/iamport.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
