--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <!-- Daum 우편번호 API 추가 -->
+    <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+    
     <title>React App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--iamprot 결제-->
